tests/snapshots/test_runner__tests__compiler__typecheck__type_annotated_pattern_1__foo.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f ((x: Int): Float) : Int = 123
//         ^^^ Expected Float, got Int

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotated_pattern_1/foo.kk:1:12
  │
1 │ let f ((x: Int): Float) : Int = 123
  │            ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Float       | + Int       |
    +---------------+-------------+
